<resources>
    <string name="volver_stock">Volver</string>
    <string name="volver_pedido">Volver</string>
    <string name="volver_grafico">Volver</string>
    <string name="volver_modificarDatos">Volver</string>
    <string name="volver_datosPersonales">Volver</string>
    <string name="volver_agregarHilo">Volver</string>
    <string name="volver_modificarHilo">Volver</string>
    <string name="volver_modificarHiloFinal">Volver</string>
    <string name="volver_respuestasTemaForo">Volver</string>
    <string name="guardar_agregarHilo">Guardar</string>
    <string name="guardar_modificarHilo">Guardar</string>
    <string name="app_name">Threadly</string>
    <string name="bienvenidaUser">Siempre es un buen momento para empezar a crear</string>
    <string name="ingresarNombreUser">Nombre de Usuario</string>
    <string name="ingresarConstrasenaUser">Contraseña</string>
    <string name="crearCuenta">¿No tienes cuenta? Pincha aquí</string>
    <string name="ingresarThreadly">Entrar</string>
    <string name="bienvenidaNewUser">¡Te damos la bienvenida a Threadly!</string>
    <string name="agradecerRegistro">Gracias por confiar en nosotras</string>
    <string name="principal_threadly">THREADLY</string>
    <string name="saludo">Hola,</string>
    <string name="mensaje_Stock">Stock Actual de Madejas</string>
    <string name="mensaje_grafico">Último Gráfico añadido</string>
    <string name="mensaje_tip">Tip del día</string>
    <string name="datosPersonales">Datos Personales</string>
    <string name="nombreUsuario">Nombre de Usuario : </string>
    <string name="fotoPerfil">Foto de Perfil:</string>
    <string name="miembroDesde">Miembro desde :</string>
    <string name="botonModificar">Modificar Datos</string>
    <string name="botonCerrarSesion">Cerrar Sesión</string>
    <string name="botonEliminar">Eliminar Cuenta</string>
    <string name="cabeceraEliminarCuenta">ELIMINAR CUENTA</string>
    <string name="mensajeConfirmacionEliminar">¿De verdad quieres eliminar tu cuenta de Threadly?</string>
    <string name="btnArrepentimiento">¡No, me he arrepentido!</string>
    <string name="btnEliminarCuenta">Sí...Hasta pronto</string>
    <string name="modificarDatos">Modificar Datos</string>
    <string name="escogerImagen">Escoge una imagen :</string>
    <string name="cambiarNombre">Cambiar nombre de usuario :</string>
    <string name="nuevoNombre">Introduce nuevo nombre de usuario...</string>
    <string name="botonGuardarCambios">Guardar Cambios</string>
    <string name="cabeceraStockPersonal">STOCK PERSONAL</string>
    <string name="agregarHiloStk">Añadir Hilo</string>
    <string name="botonAgregarMadejaStk">Añadir Madeja</string>
    <string name="botonEliminarMadejaStk">Eliminar Madeja</string>
    <string name="no_hay_resultados">No tienes ese hilo en tu stock :( Borra la búsqueda para volver a ver el contenido de la tabla</string>
    <string name="numeroHiloStk">HILO</string>
    <string name="numeroMadejasStk">MADEJAS</string>
    <string name="hiloID">Hilo</string>
    <string name="numeroMadejasTabla">Madejas</string>
    <string name="cabeceraDialogAgregarHiloStk">AÑADIR HILO</string>
    <string name="textoEntradaStk">Vamos a añadir un hilo a tu Stock Personal</string>
    <string name="pedirHiloStk">Introduce el nº del hilo</string>
    <string name="pedirMadejaStk">Introduce el nº de madejas</string>
    <string name="botonAgregarHiloStk">Guardar</string>
    <string name="cabececeraUps">UPS...</string>
    <string name="textoEntradaUps">El hilo ya contiene registros. ¿Deseas añadirle más madejas?</string>
    <string name="alertMejorMadejasStk">Sí, quiero añadir madejas</string>
    <string name="volverStockAlerta">No, me he equivocado</string>
    <string name="cabeceraDialogEliminarHiloStk">ELIMINAR HILO</string>
    <string name="confirmarEliminarHiloStk">¿Seguro que quieres eliminar el hilo "%s" de tu stock?</string>
    <string name="botonEliminarHiloStk">Sí, eliminar</string>
    <string name="cabeceraAgregarMadejaStk">AÑADIR MADEJAS</string>
    <string name="textoAgregarMadejaStk">Número de madejas a añadir para el hilo: </string>
    <string name="agregarMadejasStk">Nº de madejas a añadir</string>
    <string name="madejasActualesStk">Actuales: </string>
    <string name="guardarMadejaStk">Guardar</string>
    <string name="cabeceraEliminarMadejaStk">ELIMINAR MADEJAS</string>
    <string name="textoEliminarMadejaInfoStk">Número de madejas a eliminar para el hilo: </string>
    <string name="edTxt_introducirNumHiloMadejasEliminarStk">Nº del hilo</string>
    <string name="introducirNumMadejasEliminarStk">Nº de madejas a eliminar</string>
    <string name="eliminarMadejaStk">Eliminar Madeja</string>
    <string name="ConsultarHilosEncabezado">CONSULTAR HILOS</string>
    <string name="no_hay_resultadosCatalogo">Ese hilo no se encuentra en tu catálogo :( Borra la búsqueda para volver a ver el contenido de la tabla</string>
    <string name="NumHiloConsulta">HILO</string>
    <string name="nombreHiloConsulta">NOMBRE</string>
    <string name="colorHiloConsulta">COLOR</string>
    <string name="numHiloCat">Hilo</string>
    <string name="nombreHiloCat">Nombre</string>
    <string name="colorHiloCat">Color</string>
    <string name="boton_agregarHiloConsulta">Añadir hilo</string>
    <string name="boton_ModificarHiloConsulta">Modificar hilo</string>
    <string name="agregarHiloConsulta">AÑADIR HILO</string>
    <string name="agregarNumHilo">Introduce un número...</string>
    <string name="agregarNombreHilo">Introduce un nombre...</string>
    <string name="modificarHiloConsulta">MODIFICAR HILO</string>
    <string name="introducirNumHilo">Introduce número de hilo...</string>
    <string name="marcarCampos">Marca los campos que deseas modificar :</string>
    <string name="numHiloModificar">Número</string>
    <string name="nombreHiloModificar">Nombre</string>
    <string name="botonSiguiente">Siguiente</string>
    <string name="introducirNumHiloModificar">Introduce un número...</string>
    <string name="introducirNombreHiloModificar">Introduce un nombre...</string>
    <string name="eliminarHiloCabeceraCat">ELIMINAR HILO</string>
    <string name="confirmarEliminarHiloCat">¿Seguro que quieres eliminar el hilo "%s" del catálogo?</string>
    <string name="botonVolverEliminarCat">Volver</string>
    <string name="botonEliminarHiloCat">Sí, eliminar</string>
    <string name="cabeceraPedido">PEDIDO HILOS</string>
    <string name="resultado_nombre">Resultado: Nombre</string>
    <string name="madejasTotalPedido">Total Madejas: </string>
    <string name="no_hay_resultadosPedido">No tienes ese gráfico en tu pedido :( Borra la búsqueda para volver a ver el contenido de la tabla</string>
    <string name="agregarGraficoPedido">Añadir Gráfico</string>
    <string name="descargarPedido">Descargar</string>
    <string name="realizarPedido">Tienda</string>
    <string name="textoElegirTienda">Escoge una tienda para realizar tu pedido</string>
    <string name="textoAmazon">Amazon</string>
    <string name="textoAliExpress">AliExpress</string>
    <string name="textoTemu">Temu</string>
    <string name="columnaNombreGrafico">NOMBRE</string>
    <string name="columnaMadejasPedido">MADEJAS</string>
    <string name="textoNombreGrafico">Nombre</string>
    <string name="textoMadejasPedido">Madejas</string>
    <string name="cabeceraDialogAgregarGrafico">AÑADIR GRÁFICO AL PEDIDO</string>
    <string name="pedirNombreGrafico">Nombre del gráfico</string>
    <string name="pedirCountTela">Count Tela \n (14/ 16/ 18/ 20/ 25)</string>
    <string name="guardarGrafico">Guardar</string>
    <string name="cabeceraDialogEliminarGrafico">ELIMINAR GRÁFICO DEL PEDIDO</string>
    <string name="mensajeEliminar">¿Seguro que quieres eliminar este gráfico del pedido actual?</string>
    <string name="nombreGrafico">Nombre</string>
    <string name="eliminarGrafico">Eliminar</string>
    <string name="cabeceraGrafico">NOMBRE GRÁFICO</string>
    <string name="no_hay_resultadosGrafico">No tienes ese hilo registrado para este gráfico :( Borra la búsqueda para volver a ver el contenido de la tabla</string>
    <string name="totalMadejasGraficoIndividual">Total Madejas: </string>
    <string name="stockHiloActual">Stock: %1$s </string>
    <string name="agregarHiloGraficoIndividual">Añadir Hilo</string>
    <string name="columnaHiloGrafico">HILO</string>
    <string name="columnaPuntadasGrafico">PUNTADAS</string>
    <string name="columnaMadejasGrafico">MADEJAS</string>
    <string name="columnaHilografico">MODIFICAR</string>
    <string name="textoHiloGrafico">Hilo</string>
    <string name="textoPuntadasGrafico">Puntadas</string>
    <string name="textoMadejasGrafico">Madejas</string>
    <string name="columnaModificarPedidoMadeja">Pedir</string>
    <string name="cabeceraForo">COMUNIDAD THREADLY</string>
    <string name="respuestaTema">Introduce tu respuesta...</string>
    <string name="enviarRespuestaForo">Enviar</string>
    <string name="tituloTemaForo">Título</string>
    <string name="contenidoTemaForo">Contenido</string>
    <string name="hintTituloTema">Introduce un título...</string>
    <string name="hintContenidoTema">Introduce tu contenido...</string>
    <string name="botonCrearTemaForo">Crear</string>
    <string name="cabeceraGrafico_dialog_addHilo">AÑADIR HILO</string>
    <string name="introducirHilo_dialog_addHilo">Introduce el nº del hilo</string>
    <string name="introducirPuntadas_dialog_addHilo">Introduce el nº de puntadas</string>
    <string name="guardarHilo_dialog_addHilo">Guardar</string>
    <string name="cabeceraGrafico_dialog_deleteHilo">BORRAR HILO</string>
    <string name="textoInfo_dialog_deleteHilo">¿Estás seguro de que quieres eliminar el hilo "%s" del gráfico?</string>
    <string name="textoInfo_secundario_dialog_deleteHilo">Se eliminará de este gráfico y por tanto del pedido</string>
    <string name="guardarHilo_dialog_deleteHilo">Borrar</string>
    <string name="cabeceraAlmacen">ALMACÉN PEDIDOS</string>
    <string name="no_hay_resultadosAlmacen">No tienes ese pedido en tu almacén :( Borra la búsqueda para volver a ver el contenido de la tabla</string>
    <string name="columnaNombrePedido">NOMBRE</string>
    <string name="contenidoNombrePedido">nombre</string>
</resources>