<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/reutilizable_marco_dialog"
    android:elevation="10dp"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtVw_modificarHiloConsulta"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/reutilizable_borde_cabecera_dialog"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:text="@string/modificarHiloConsulta"
        android:textAlignment="center"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edTxt_introducirNumHilo"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/reutilizable_campo_texto_redondeado"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:hint="@string/introducirNumHilo"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/txtVw_modificarHiloConsulta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/marcarCampos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/marcarCampos"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/edTxt_introducirNumHilo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/ckBx_numHiloModificar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/numHiloModificar"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/marcarCampos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ckB_nombreHiloModificar" />

    <CheckBox
        android:id="@+id/ckB_nombreHiloModificar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/nombreHiloModificar"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/marcarCampos"
        app:layout_constraintStart_toEndOf="@id/ckBx_numHiloModificar"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ckBx_numHiloModificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_volverModificarHilo"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fondoBoton"
            android:fontFamily="@font/catchy_mager"
            android:text="@string/volver_modificarHiloFinal"
            android:textColor="@color/textoCabecera_y_Botones"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btn_botonSiguienteModificar"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fondoBoton"
            android:fontFamily="@font/catchy_mager"
            android:text="@string/botonSiguiente"
            android:textColor="@color/textoCabecera_y_Botones"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
