<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/reutilizable_marco_dialog"
    android:elevation="10dp"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtVw_cabeceraAgregarMadejaStk"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/reutilizable_cabecera"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:text="@string/cabeceraAgregarMadejaStk"
        android:textAlignment="center"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtVw_textoAgregarMadejaStk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/textoAgregarMadejaStk"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_cabeceraAgregarMadejaStk" />

    <EditText
        android:id="@+id/edTxt_agregarMadejasStk_hilo"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/reutilizable_campo_texto_redondeado"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:hint="@string/pedirHiloStk"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_textoAgregarMadejaStk" />

    <EditText
        android:id="@+id/edTxt_agregarMadejasStk"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/reutilizable_campo_texto_redondeado"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:hint="@string/agregarMadejasStk"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTxt_agregarMadejasStk_hilo" />

    <TextView
        android:id="@+id/txtVw_madejasActualesStk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/madejasActualesStk"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTxt_agregarMadejasStk" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_madejasActualesStk">

        <Button
            android:id="@+id/btn_volver_stock_dialog_eliminarMadeja"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fondoBoton"
            android:fontFamily="@font/catchy_mager"
            android:text="@string/volver_stock"
            android:textColor="@color/textoCabecera_y_Botones"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btn_guardarMadejaStk"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:backgroundTint="@color/fondoBoton"
            android:fontFamily="@font/catchy_mager"
            android:text="@string/guardarMadejaStk"
            android:textColor="@color/textoCabecera_y_Botones"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
