<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/Cabeceras_y_Toolbar"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/txtVw_numHiloConsulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:text="@string/NumHiloConsulta"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtVw_nombreHiloConsulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:text="@string/nombreHiloConsulta"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtVw_colorHiloConsulta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:text="@string/colorHiloConsulta"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>