<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPantallas">


    <TextView
        android:id="@+id/txtVw_cabeceraEliminarMadejaStk"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/reutilizable_cabecera"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:text="@string/cabeceraEliminarMadejaStk"
        android:textAlignment="center"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtVw_textoEliminarMadejaStk"
        android:layout_width="291dp"
        android:layout_height="65dp"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/textoEliminarMadejaInfoStk"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_cabeceraEliminarMadejaStk"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/edTxt_introducirNumMadejasEliminarStk"
        android:layout_width="292dp"
        android:layout_height="64dp"
        android:background="@drawable/reutilizable_campo_texto_redondeado"
        android:fontFamily="@font/catchy_mager"
        android:gravity="center"
        android:hint="@string/introducirNumMadejasEliminarStk"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_textoEliminarMadejaStk"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/txtVw_madejasActualesStk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/madejasActualesStk"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTxt_introducirNumMadejasEliminarStk"
        app:layout_constraintVertical_bias="0.06999999" />

    <Button
        android:id="@+id/btn_eliminarMadejaConfirmarStk"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/fondoBoton"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/eliminarMadejaStk"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtVw_madejasActualesStk"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/btn_volver_stock_dialog_eliminarMadeja"
        android:layout_width="220dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/fondoBoton"
        android:fontFamily="@font/catchy_mager"
        android:text="@string/volver_stock"
        android:textColor="@color/textoCabecera_y_Botones"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_eliminarMadejaConfirmarStk"
        app:layout_constraintVertical_bias="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>